// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetches a random book 1`] = `
Object {
  "cover": Object {
    "url": "http://examples.devmastery.pl/assets/images/book-covers/witcher4.jpg",
  },
  "title": "The tower of the swallow",
}
`;

exports[`fetches an author 1`] = `
Object {
  "author": Object {
    "books": Array [
      Object {
        "title": "Harry Potter and the Chamber of Secrets",
      },
      Object {
        "title": "Harry Potter and the Deathly Hallows",
      },
      Object {
        "title": "Harry Potter and the Goblet of Fire",
      },
      Object {
        "title": "Harry Potter and the Half-Blood Prince",
      },
      Object {
        "title": "Harry Potter and the Order of the Phoenix",
      },
      Object {
        "title": "Harry Potter and the Prisoner of Azkaban",
      },
      Object {
        "title": "Harry Potter and the Sorcerer's Stone",
      },
    ],
    "id": 1,
    "name": "J. K. Rowling",
  },
}
`;

exports[`fetches authors along with books 1`] = `
Object {
  "authors": Array [
    Object {
      "books": Array [
        Object {
          "title": "Harry Potter and the Chamber of Secrets",
        },
        Object {
          "title": "Harry Potter and the Deathly Hallows",
        },
        Object {
          "title": "Harry Potter and the Goblet of Fire",
        },
        Object {
          "title": "Harry Potter and the Half-Blood Prince",
        },
        Object {
          "title": "Harry Potter and the Order of the Phoenix",
        },
        Object {
          "title": "Harry Potter and the Prisoner of Azkaban",
        },
        Object {
          "title": "Harry Potter and the Sorcerer's Stone",
        },
      ],
      "name": "J. K. Rowling",
    },
    Object {
      "books": Array [
        Object {
          "title": "Abaddon's Gate",
        },
        Object {
          "title": "Babylon's Ashes",
        },
        Object {
          "title": "Caliban's War",
        },
        Object {
          "title": "Cibola Burn",
        },
        Object {
          "title": "Leviathan Wakes",
        },
        Object {
          "title": "Nemesis Games",
        },
        Object {
          "title": "Persepolis Rising",
        },
        Object {
          "title": "Tiamat's Wrath",
        },
      ],
      "name": "James S. A. Corey",
    },
    Object {
      "books": Array [
        Object {
          "title": "Baptism of fire",
        },
        Object {
          "title": "Blood of Elves",
        },
        Object {
          "title": "The lady of the lake",
        },
        Object {
          "title": "The tower of the swallow",
        },
        Object {
          "title": "Time of contempt",
        },
      ],
      "name": "Andrzej Sapkowski",
    },
  ],
}
`;

exports[`fetches books 1`] = `
Object {
  "books": Object {
    "rows": Array [
      Object {
        "cover": Object {
          "url": "http://examples.devmastery.pl/assets/images/book-covers/expanse3.jpg",
        },
        "id": 10,
        "title": "Abaddon's Gate",
      },
      Object {
        "cover": Object {
          "url": "http://examples.devmastery.pl/assets/images/book-covers/expanse6.jpg",
        },
        "id": 13,
        "title": "Babylon's Ashes",
      },
      Object {
        "cover": Object {
          "url": "http://examples.devmastery.pl/assets/images/book-covers/witcher3.jpg",
        },
        "id": 18,
        "title": "Baptism of fire",
      },
      Object {
        "cover": Object {
          "url": "http://examples.devmastery.pl/assets/images/book-covers/witcher1.jpg",
        },
        "id": 16,
        "title": "Blood of Elves",
      },
      Object {
        "cover": Object {
          "url": "http://examples.devmastery.pl/assets/images/book-covers/expanse2.jpg",
        },
        "id": 9,
        "title": "Caliban's War",
      },
      Object {
        "cover": Object {
          "url": "http://examples.devmastery.pl/assets/images/book-covers/expanse4.jpg",
        },
        "id": 11,
        "title": "Cibola Burn",
      },
      Object {
        "cover": Object {
          "url": "http://examples.devmastery.pl/assets/images/book-covers/harry2.jpg",
        },
        "id": 2,
        "title": "Harry Potter and the Chamber of Secrets",
      },
      Object {
        "cover": Object {
          "url": "http://examples.devmastery.pl/assets/images/book-covers/harry7.jpg",
        },
        "id": 7,
        "title": "Harry Potter and the Deathly Hallows",
      },
      Object {
        "cover": Object {
          "url": "http://examples.devmastery.pl/assets/images/book-covers/harry4.jpg",
        },
        "id": 4,
        "title": "Harry Potter and the Goblet of Fire",
      },
    ],
    "total": 20,
  },
}
`;

exports[`fetches books along with authors and books again 1`] = `
Object {
  "books": Object {
    "rows": Array [
      Object {
        "author": Object {
          "books": Array [
            Object {
              "title": "Abaddon's Gate",
            },
            Object {
              "title": "Babylon's Ashes",
            },
            Object {
              "title": "Caliban's War",
            },
            Object {
              "title": "Cibola Burn",
            },
            Object {
              "title": "Leviathan Wakes",
            },
            Object {
              "title": "Nemesis Games",
            },
            Object {
              "title": "Persepolis Rising",
            },
            Object {
              "title": "Tiamat's Wrath",
            },
          ],
          "name": "James S. A. Corey",
        },
        "title": "Abaddon's Gate",
      },
      Object {
        "author": Object {
          "books": Array [
            Object {
              "title": "Abaddon's Gate",
            },
            Object {
              "title": "Babylon's Ashes",
            },
            Object {
              "title": "Caliban's War",
            },
            Object {
              "title": "Cibola Burn",
            },
            Object {
              "title": "Leviathan Wakes",
            },
            Object {
              "title": "Nemesis Games",
            },
            Object {
              "title": "Persepolis Rising",
            },
            Object {
              "title": "Tiamat's Wrath",
            },
          ],
          "name": "James S. A. Corey",
        },
        "title": "Babylon's Ashes",
      },
      Object {
        "author": Object {
          "books": Array [
            Object {
              "title": "Baptism of fire",
            },
            Object {
              "title": "Blood of Elves",
            },
            Object {
              "title": "The lady of the lake",
            },
            Object {
              "title": "The tower of the swallow",
            },
            Object {
              "title": "Time of contempt",
            },
          ],
          "name": "Andrzej Sapkowski",
        },
        "title": "Baptism of fire",
      },
      Object {
        "author": Object {
          "books": Array [
            Object {
              "title": "Baptism of fire",
            },
            Object {
              "title": "Blood of Elves",
            },
            Object {
              "title": "The lady of the lake",
            },
            Object {
              "title": "The tower of the swallow",
            },
            Object {
              "title": "Time of contempt",
            },
          ],
          "name": "Andrzej Sapkowski",
        },
        "title": "Blood of Elves",
      },
      Object {
        "author": Object {
          "books": Array [
            Object {
              "title": "Abaddon's Gate",
            },
            Object {
              "title": "Babylon's Ashes",
            },
            Object {
              "title": "Caliban's War",
            },
            Object {
              "title": "Cibola Burn",
            },
            Object {
              "title": "Leviathan Wakes",
            },
            Object {
              "title": "Nemesis Games",
            },
            Object {
              "title": "Persepolis Rising",
            },
            Object {
              "title": "Tiamat's Wrath",
            },
          ],
          "name": "James S. A. Corey",
        },
        "title": "Caliban's War",
      },
      Object {
        "author": Object {
          "books": Array [
            Object {
              "title": "Abaddon's Gate",
            },
            Object {
              "title": "Babylon's Ashes",
            },
            Object {
              "title": "Caliban's War",
            },
            Object {
              "title": "Cibola Burn",
            },
            Object {
              "title": "Leviathan Wakes",
            },
            Object {
              "title": "Nemesis Games",
            },
            Object {
              "title": "Persepolis Rising",
            },
            Object {
              "title": "Tiamat's Wrath",
            },
          ],
          "name": "James S. A. Corey",
        },
        "title": "Cibola Burn",
      },
      Object {
        "author": Object {
          "books": Array [
            Object {
              "title": "Harry Potter and the Chamber of Secrets",
            },
            Object {
              "title": "Harry Potter and the Deathly Hallows",
            },
            Object {
              "title": "Harry Potter and the Goblet of Fire",
            },
            Object {
              "title": "Harry Potter and the Half-Blood Prince",
            },
            Object {
              "title": "Harry Potter and the Order of the Phoenix",
            },
            Object {
              "title": "Harry Potter and the Prisoner of Azkaban",
            },
            Object {
              "title": "Harry Potter and the Sorcerer's Stone",
            },
          ],
          "name": "J. K. Rowling",
        },
        "title": "Harry Potter and the Chamber of Secrets",
      },
      Object {
        "author": Object {
          "books": Array [
            Object {
              "title": "Harry Potter and the Chamber of Secrets",
            },
            Object {
              "title": "Harry Potter and the Deathly Hallows",
            },
            Object {
              "title": "Harry Potter and the Goblet of Fire",
            },
            Object {
              "title": "Harry Potter and the Half-Blood Prince",
            },
            Object {
              "title": "Harry Potter and the Order of the Phoenix",
            },
            Object {
              "title": "Harry Potter and the Prisoner of Azkaban",
            },
            Object {
              "title": "Harry Potter and the Sorcerer's Stone",
            },
          ],
          "name": "J. K. Rowling",
        },
        "title": "Harry Potter and the Deathly Hallows",
      },
      Object {
        "author": Object {
          "books": Array [
            Object {
              "title": "Harry Potter and the Chamber of Secrets",
            },
            Object {
              "title": "Harry Potter and the Deathly Hallows",
            },
            Object {
              "title": "Harry Potter and the Goblet of Fire",
            },
            Object {
              "title": "Harry Potter and the Half-Blood Prince",
            },
            Object {
              "title": "Harry Potter and the Order of the Phoenix",
            },
            Object {
              "title": "Harry Potter and the Prisoner of Azkaban",
            },
            Object {
              "title": "Harry Potter and the Sorcerer's Stone",
            },
          ],
          "name": "J. K. Rowling",
        },
        "title": "Harry Potter and the Goblet of Fire",
      },
    ],
  },
}
`;

exports[`fetches users 1`] = `
Array [
  Object {
    "avatar": Object {
      "color": "yellow",
      "image": Object {
        "url": "http://examples.devmastery.pl/assets/images/avatars/w13.png",
      },
    },
    "email": "alice@example.com",
    "name": "Alice",
  },
  Object {
    "avatar": Object {
      "color": "green",
      "image": Object {
        "url": "http://examples.devmastery.pl/assets/images/avatars/m10.png",
      },
    },
    "email": "bob@example.com",
    "name": "Bob",
  },
  Object {
    "avatar": Object {
      "color": "red",
      "image": Object {
        "url": "http://examples.devmastery.pl/assets/images/avatars/w2.png",
      },
    },
    "email": "celine@example.com",
    "name": "Celine",
  },
  Object {
    "avatar": Object {
      "color": "blue",
      "image": Object {
        "url": "http://examples.devmastery.pl/assets/images/avatars/m25.png",
      },
    },
    "email": "dan@example.com",
    "name": "Dan",
  },
]
`;
